// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wallet (e2e) Expected usage CRUD should not delete a wallet with an environment 1`] = `"You can't delete a wallet that has environments"`;

exports[`Wallet (e2e) Unexpected usage Mall-formed Input should not delete a wallet 1`] = `
Array [
  Object {
    "extensions": Object {
      "code": "BAD_USER_INPUT",
    },
    "locations": Array [
      Object {
        "column": 27,
        "line": 1,
      },
    ],
    "message": "Variable \\"$walletId\\" of required type \\"String!\\" was not provided.",
  },
]
`;

exports[`Wallet (e2e) Unexpected usage Mall-formed Input should not find a wallet 1`] = `
Array [
  Object {
    "extensions": Object {
      "code": "BAD_USER_INPUT",
    },
    "locations": Array [
      Object {
        "column": 18,
        "line": 1,
      },
    ],
    "message": "Variable \\"$walletId\\" of required type \\"String!\\" was not provided.",
  },
]
`;
